--- a/app/assets/stylesheets/pages/_show_booking.scss
+++ b/app/assets/stylesheets/pages/_show_booking.scss
@@ -1,6 +1,6 @@
 // BANNER DE LA SHOW ->
 
-.banner-show-pro {
+.banner-show-booking {
   color: white;
   // height: 500px;
   padding: 100px;
@@ -12,7 +12,7 @@
   // position:fixed;
 }
 
-.banner-pro-info {
+.banner-pro-booking {
   padding: 10px 40px;
   margin: auto 0;
 }
