--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,35 +1,46 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container opacity mt-2" style="width: 600px">
+  <div class="card border-white p-5">
+    <div class="text-center p-3">
+    <h2>🤿 Edit <%= resource_name.to_s.humanize %></h2>
+    </div>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+      <div class="form-inputs">
+        <%= f.input :email, required: true, autofocus: true, placeholder: "email*",
+                          label: false %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+        <% end %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+        <%= f.input :password,
+                    hint: "leave it blank if you don't want to change it",
+                    required: false,
+                    input_html: { autocomplete: "new-password" },
+                    placeholder:"new-password*",
+                    label: false %>
+        <%= f.input :password_confirmation,
+                    required: false,
+                    input_html: { autocomplete: "new-password" },
+                    placeholder:"new-password confirmation*",
+                    label: false %>
+        <%= f.input :current_password,
+                    hint: "we need your current password to confirm your changes",
+                    required: false,
+                    input_html: { autocomplete: "current-password" },
+                    placeholder:"current-password*",
+                    label: false %>
+      </div>
+
+      <div class="form-actions">
+        <div class="d-grid col-3 mx-auto mt-4">
+          <%= f.button :submit, "Update", class: "btn btn-primary" %>
+        </div>
+      </div>
     <% end %>
-
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+        <div class="d-grid col-3 mx-auto my-4">
+        <%= link_to "Back", :back, class: "btn btn-secondary" %>
+        </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
