--- a/app/views/devise/registrations/_new_diver.html.erb
+++ b/app/views/devise/registrations/_new_diver.html.erb
@@ -37,7 +37,7 @@ data: {turbo: false}) do |f| %>
   </div>
 
   <div class="form-actions">
-    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+    <div class="d-grid col-3 mx-auto my-4">
     <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
     </div>
   </div>
