--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -15,19 +15,37 @@
   // box-shadow: $box-shadow-cards;
   margin-top: 10px;
   border-radius: 5px;
-  > img {
+  // .image-pro {
+  //   overflow: hidden;
+  // }
+  .img-container {
+    height: 200px;
+    max-height: 200px;
+    overflow: hidden;
+  }
+  > div > img {
     height: 200px;
     width: 100%;
     object-fit: cover;
-  }
+    transition: transform .2s;
+      &:hover{
+        max-height: 200px;
+        -ms-transform: scale(1.5);
+        -webkit-transform: scale(1.5);
+        transform: scale(1.5);
+        }
+    }
   h2 {
     font-size: 20px;
     font-weight: bold;
-    color: #3439C9;    ;
+    color: #3439C9;
     margin: 0;
     margin-top: 15px;
     margin-bottom: 20px;
     font-family: $headers-font;
+      &:hover{
+      text-decoration: underline;
+      color: #3439C9;}
   }
   p {
     font-size: 12px;
@@ -106,4 +124,8 @@
   text-decoration: underline;
   font-size: 12px;
   color: $gray;
+    &:hover{
+      color: gray
+    }
+
 }
