--- a/app/views/offers/_show_offers_pro.html.erb
+++ b/app/views/offers/_show_offers_pro.html.erb
@@ -20,11 +20,13 @@
       </div>
       <div class="modal-body">
         <div class="d-flex justify-content-between">
+          <p><%= offer.dives %> dive(s)</p>
           <p>Category: <%= offer.category %></p>
+        </div>
+        <div class="d-flex justify-content-between">
+          <p>Duration: <%= offer.duration %> <%= offer.unit_duration %></p>
           <p>Level: <%= offer.level %></p>
         </div>
-        <p>Number of dives: <%= offer.dives %></p>
-        <p>Duration: <%= offer.duration %> <%= offer.unit_duration %></p>
         <h5>Briefing:</h5>
         <p><%= offer.briefing %></p>
         <h5>Included:</h5>
@@ -33,9 +35,9 @@
         <p><%= offer.prerequisites %></p>
       </div>
       <div class="modal-footer justify-content-between">
-      <%= render "bookings/new", offer: offer %>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <%# <button type="button" class="btn btn-primary">Request booking</button> %>
+        <h3>Request the booking of this dive</h3>
+        <%= render "bookings/new", offer: offer %>
+        <%# <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> %>
       </div>
     </div>
   </div>
