--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -4,6 +4,7 @@
     <h1><%= @booking.offer.name %></h1>
     <h3>Your teacher: <%=@booking.offer.user.first_name%> <%= @booking.user.last_name%></h3>
     <h5><i class="fa-solid fa-location-pin"></i> <%= @booking.location%></h3>
+    <h5>Status: <%=@booking.status%></h5>
   </div>
 </div>
 
