dashboard header cleaned

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 
 <%# Conditions on the navbar class depending on the dark or light them%>
 
-<% if ((controller_name == "pages" && action_name == "home") || (controller_name == "pros" && action_name == "show"))  %>
+<% if ((controller_name == "pages" && action_name == "home") || (controller_name == "pros" && action_name == "show") || (controller_name == "pages" && action_name == "dashboard"))  %>
   <div class="navbar navbar-expand-sm navbar-transparent navbar-dark fixed-top">
 <% else %>
   <div class="navbar navbar-expand-sm navbar-plain navbar-light fixed-top">
