pro rouge partout

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,6 +10,11 @@
     .navbar-brand img {
       width: 40px;
     }
+    .btn-pro {
+      margin-left: -10px;
+      color: $red;
+      font-size: smaller;
+    }
 }
 
 .container-transparent-navbar {
