--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -50,10 +50,20 @@
         <div id="message-<%= message.id %>">
           <small>
             <strong><%= message.user.first_name %></strong>
-            <i><%= message.created_rat.strftime("%a %b %e at %l:%M %p") %></i>
+            <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
           </small>
           <p><%= message.content %></p>
         </div>
+      <% end %>
+      <%= simple_form_for [@booking, @message],
+        html: {class: "d-flex"} do |f|
+        %>
+        <%= f.input :content,
+                    label: false,
+                    placeholder: "Coucou",
+                    wrapper_html: {class: "flex-grow-1"}
+                    %>
+        <%= f.submit "Send", class: "btn btn-primary mb-3" %>
       <% end %>
     </div>
   </div>
