--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -18,4 +18,16 @@
 
       </div>
 </div>
+<div class="container">
+  <h3>Calendar:</h3>
+  <%= month_calendar(events: @bookings, attribute: :start_at) do |date, bookings| %>
+  <%= date %>
+
+  <% bookings.each do |booking| %>
+    <div class="meeting">
+      <%= link_to "#{booking.user.first_name}", booking_path(booking), class: "btn btn-outline-success" %>
+    </div>
+  <% end %>
+<% end %>
+</div>
 <%= render "bookings/dashboard"%>
