texte centre et colonne

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -16,3 +16,15 @@ $headers-font: "DM sans", "Helvetica", "sans-serif";
 //        font-url('FontFile.ttf') format('truetype')
 // }
 // $my-font: "Font Name";
+
+.font-size-28 {
+  font-size: 28px;
+}
+
+.font-size-18 {
+  font-size: 18px;
+}
+
+.text-align-justify {
+  text-align: justify;
+}
