--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,17 +24,17 @@
     </div>
   </div>
 <div class="dark fold">
-  <div class="container">
-    <h1>About us</h1>
-    <p>Founded by divers and ocean lovers, ScubaLibre allows you to explore the underwater world the easiest way possible.
-    Whether you're eager to learn how to dive or you want to perfect your skills, our members will find the best option for you !</p>
-    <p>No matter where you are in your diving journey of learning, the Scuba Libre staff has the instruction and safety to provide you with the next step. Check out all our courses, from recreational diving to a professional career path, and let us help you reach your next underwater diving goal.</p>
-
-    <h2>Scuba Libre cares about the protection of the underworld environment</h2>
-    <p>Wondering how to protect the ocean? Here are a bunch of straightforward things to do and smart ways to help save the oceans as a diver.
-    Since the ocean covers more than 71% of our planet’s surface, it is home to an astounding diversity of species and affects everything from climate regulations to food systems.
-    It is crucial as divers that we protect our ocean from the effects of overfishing, climate change, and over pollution as it encourages others to also protect the ocean that we love so much.
-    Whilst it’s easy to feel powerless and overwhelmed, the truth is, if everyone pitches in, then we can make a big difference.</p>
+  <div class="container d-flex">
+    <div class="w-50 px-5 border-end">
+      <h2 class="font-size-28 pb-5 text-center">About us</h2>
+      <p class="font-size-18 text-align-justify">Founded by divers and ocean lovers, ScubaLibre allows you to explore the underwater world the easiest way possible.
+      Whether you're eager to learn how to dive or you want to perfect your skills, our members will find the best option for you !</p>
+    </div>
+    <div class="w-50 px-5">
+      <h2 class="font-size-28 pb-5 text-center">Scuba Libre and the environment</h2>
+      <p class="font-size-18 text-align-justify">Wondering how to protect the ocean? Here are a bunch of straightforward things to do and smart ways to help save the oceans as a diver.
+      Since the ocean covers more than 71% of our planet’s surface, it is home to an astounding diversity of species and affects everything from climate regulations to food systems.</p>
+    </div>
   </div>
 </div>
 <div class="inspire">
