--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -88,7 +88,7 @@
 
 .vague {
   background-size: cover;
-  background-position: bottom;
+  background-position: top;
   height: 15vh;
   background-image: url('VAGUE.png');
 }
