--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,100 +37,97 @@
     </div>
   </div>
 </div>
-<div class="inspire">
-  <h1> Feeling uninspired ? Here are some recommendations for you </h1>
+  <div class="fold container pb-1">
+  <div class="font-size-28 text-center" >
+    <h2> Feeling uninspired ? Here are some recommendations for you </h2>
+  </div>
+
+  <div class="cards d-flex px-5 py-3 fold">
+    <div class="card-trip w-25 rounded">
+      <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654246358/sonaal-bangera-RVuj71bsU4Y-unsplash_ihtj9y.jpg" />
+        <div class="card-trip-infos">
+          <div>
+            <h2>Bali</h2>
+            <p>Dive with manta rays</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="card-trip w-25 rounded">
+      <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654246658/david-reynolds--eMN9QKB5bE-unsplash_glwpns.jpg" />
+        <div class="card-trip-infos">
+          <div>
+            <h2>Belize</h2>
+            <p>Explore the barrier reef</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-trip w-25 rounded">
+      <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654246509/malek-bee-Zw_eV19BC58-unsplash_wsile0.jpg" />
+        <div class="card-trip-infos">
+          <div>
+            <h2>Cozumel</h2>
+            <p>Discover the wrecks of Mexico</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-trip w-25 rounded">
+      <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654174745/cenote_nma8pr.jpg" />
+      <div class="card-trip-infos">
+        <div>
+          <h2>Cancun</h2>
+          <p>Dive in the cenotes</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="cards d-flex px-5  py-3 fold">
+    <div class="card-trip w-25 rounded">
+        <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654245062/photodiver_gnf3nr.jpg" />
+        <div class="card-trip-infos">
+          <div>
+            <h2>Baja California</h2>
+            <p>Learn underwater photography</p>
+          </div>
+        </div>
+    </div>
+
+
+
+    <div class="card-trip w-25 rounded">
+        <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654200702/shifaaz-shamoon-t4a2jEhg1n8-unsplash_tvczol.jpg" />
+        <div class="card-trip-infos">
+          <div>
+            <h2>Malta</h2>
+            <p>Free dive in the best reefs</p>
+          </div>
+        </div>
+    </div>
+
+    <div class="card-trip w-25 rounded">
+        <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654238708/tech_diving_mgbnnc.jpg" />
+        <div class="card-trip-infos">
+          <div>
+            <h2>Norway</h2>
+            <p>Get into Tech Diving</p>
+          </div>
+        </div>
+    </div>
+
+    <div class="card-trip w-25 rounded">
+        <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654238858/beach_dive_dc7juf.jpg" />
+        <div class="card-trip-infos">
+          <div>
+            <h2>Honduras</h2>
+            <p>The best shore dives </p>
+          </div>
+        </div>
+    </div>
 </div>
-
-<div class="cards d-flex px-5 py-5">
-  <div class="card-trip w-25 rounded">
-    <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654246358/sonaal-bangera-RVuj71bsU4Y-unsplash_ihtj9y.jpg" />
-      <div class="card-trip-infos">
-        <div>
-          <h2>Bali</h2>
-          <p>Dive with manta rays</p>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="card-trip w-25 rounded">
-    <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654246658/david-reynolds--eMN9QKB5bE-unsplash_glwpns.jpg" />
-      <div class="card-trip-infos">
-        <div>
-          <h2>Belize</h2>
-          <p>Explore the barrier reef</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="card-trip w-25 rounded">
-    <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654246509/malek-bee-Zw_eV19BC58-unsplash_wsile0.jpg" />
-      <div class="card-trip-infos">
-        <div>
-          <h2>Cozumel</h2>
-          <p>Discover the wrecks of Mexico</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="card-trip w-25 rounded">
-    <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654174745/cenote_nma8pr.jpg" />
-    <div class="card-trip-infos">
-      <div>
-        <h2>Cancun</h2>
-        <p>Dive in the cenotes</p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="cards d-flex px-5 py-5">
-  <div class="card-trip w-25 rounded">
-      <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654245062/photodiver_gnf3nr.jpg" />
-      <div class="card-trip-infos">
-        <div>
-          <h2>Baja California</h2>
-          <p>Learn underwater photography</p>
-        </div>
-      </div>
-  </div>
-
-
-
-  <div class="card-trip w-25 rounded">
-      <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654200702/shifaaz-shamoon-t4a2jEhg1n8-unsplash_tvczol.jpg" />
-      <div class="card-trip-infos">
-        <div>
-          <h2>Malta</h2>
-          <p>Free dive in the best reefs</p>
-        </div>
-      </div>
-  </div>
-
-  <div class="card-trip w-25 rounded">
-      <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654238708/tech_diving_mgbnnc.jpg" />
-      <div class="card-trip-infos">
-        <div>
-          <h2>Norway</h2>
-          <p>Get into Tech Diving</p>
-        </div>
-      </div>
-  </div>
-
-  <div class="card-trip w-25 rounded">
-      <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654238858/beach_dive_dc7juf.jpg" />
-      <div class="card-trip-infos">
-        <div>
-          <h2>Honduras</h2>
-          <p>The best shore dives </p>
-        </div>
-      </div>
-  </div>
-</div>
-
-
-
-<div class="divers">
 </div>
 
 <div class="vague">
