--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@
 @import "font-awesome";
 @import "flatpickr/dist/flatpickr";
 @import "simple_calendar";
+@import "jquery-bar-rating/dist/themes/css-stars";
 
 
 // Your CSS partials
