--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -92,6 +92,10 @@
   height: 15vh;
   background-image: url('VAGUE.png');
 }
+.vague-showpro {
+  height: 10vh;
+  background-image: url('VAGUE.png');
+}
 
 .divers{
   height: 10vh;
