--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,10 +1,9 @@
 .avatar-profile {
-  width: 300px;
-  height: 300px;
+  width: 230px;
+  height: 220px;
   object-fit: cover;
-  border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  border-radius: 2%;
+  border: none;
 }
 
 
