--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,11 @@
 
 <%# Conditions on the navbar class depending on the dark or light them%>
 
-<% if ((controller_name == "pages" && action_name == "home") || (controller_name == "pros" && action_name == "show") || (controller_name == "pages" && action_name == "dashboard"))  %>
-  <div class="navbar navbar-expand-sm navbar-transparent navbar-dark fixed-top">
+<% if ((controller_name == "pages" && action_name == "home") || (controller_name == "pros" && action_name == "show"))  %>
+  <div class="navbar navbar-expand-sm navbar-transparent navbar-dark fixed-top" data-controller="navbar"
+  data-action="scroll@window->navbar#updateNavbar">
 <% else %>
-  <div class="navbar navbar-expand-sm navbar-plain navbar-light fixed-top">
+  <div class="navbar navbar-expand-sm navbar-plain navbar-dark fixed-top">
 <% end %>
 
 
