--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -16,21 +16,21 @@
   </div>
 <div class="container d-flex">
   <div class="filters">
-    <p>Category</p>
+    <strong><p>Category</p>
     <p>Level</p>
     <p>Price</p>
-    <p>Certification</p>
+    <p>Certification</p></strong>
   </div>
   <div class="offers">
-      <h2>Experiences</h2>
+      <h2 class="mx-4">Experiences</h2>
       <% @offers.each do |o| %>
 
-          <div class="card-offers shadow-sm">
-            <p><i class="fa-solid fa-clock"></i> <%= o.duration %> <%= o.unit_duration %> | <i class="fa-solid fa-money-bills"> </i><%= o.currency %> <%= o.price %></p>
+          <div class="card-offers shadow-sm p-4">
+            <p><i class="fa-solid fa-clock"></i> <%= o.duration %> <%= o.unit_duration %> | <i class="fa-solid fa-money-bills"></i> <%= o.currency %> <%= o.price %> | <%= o.level %></p>
             <h4><%= o.name %></h4>
             <div class="d-flex justify-content-between align-items-center">
-              <div class="">
-              <p><%= truncate o.briefing, length:150 %></p>
+              <div class="col-9">
+              <p><%= truncate o.briefing, length:250 %></p>
               </div>
               <p><%= link_to offer_path(o), class:"btn btn-primary"  do %>
                   View Offer <i class="fa-solid fa-arrow-right-long"></i>
