--- a/app/assets/stylesheets/pages/_show_booking.scss
+++ b/app/assets/stylesheets/pages/_show_booking.scss
@@ -3,13 +3,32 @@
 .banner-show-booking {
   color: white;
   // height: 500px;
-  padding: 100px;
+  padding: 100px 38px 38px 29px;
   background-color: $deep_blue;
   // background-image: linear-gradient(0deg, rgba(29,29,29,0.4) 0%, rgba(29,29,29,0.4) 100%), url(summer-background-sea-water.jpeg);
   background-size: cover;
   // z-index: -1;
   // top: 0;
   // position:fixed;
+  h1{
+    font-family: $headers-font;
+  }
+  h3{
+    font-weight: lighter;
+    font-size: 16px;
+  }
+  h5{
+    font-size: 16px;
+    font-weight: lighter;
+    color: #9aa0b1;
+    text-decoration: underline;
+  }
+
+}
+.btn-orange{
+  color: white;
+  background-color: #FFA711;
+  font-family: $body-font
 }
 
 .banner-booking-info {
@@ -77,4 +96,27 @@
 
 .badge-pill {
   background-color: #477E9F;
+}
+
+
+.infos-offer {
+  padding: 19px 50px;
+  border: 1px solid lightgray;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  h3{
+    color: #272343;
+  }
+  p {
+    color: #9aa0b1;
+  }
+}
+
+.divider{
+  border-left:1px solid lightgray;
+}
+
+
+.quarter-info {
+  width: 25%;
 }
