--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -1,20 +1,58 @@
-<div class="banner-show-booking d-flex">
-  <div class="banner-booking-info">
-    <h3>Details of:</h3>
-    <h1><%= @offer.name %></h1>
-    <h3>With: <%=@offer.user.first_name%> <%= @offer.user.last_name%></h3>
-    <h5><i class="fa-solid fa-location-pin"></i> <%= @offer.user.location%></h3>
+<div class="banner-show-booking">
+  <div class="banner-booking-info d-flex align-items-center" style="justify-content: space-between">
+    <div>
+      <h1><%= @offer.name %></h1>
+      <h3>With: <%=@offer.user.first_name%> <%= @offer.user.last_name%></h3>
+      <h5><i class="fa-solid fa-location-pin"></i> <%= @offer.user.location%></h5>
+    </div>
+    <div>
+      <button class="btn btn-orange" type="button">Contact</button>
+    </div>
   </div>
 </div>
 
 <div class="container mt-5">
-  <div class="d-flex justify-content-between">
-    <p><%= @offer.dives %> dive(s)</p>
-    <p>Category: <%= @offer.category %></p>
-  </div>
-  <div class="d-flex justify-content-between">
-    <p>Duration: <%= @offer.duration %> <%= @offer.unit_duration %></p>
-    <p>Level: <%= @offer.level %></p>
+  <div class="d-flex justify-content-between infos-offer">
+    <div class="quarter-info">
+      <div class="d-flex justify-content-around" style="width 100%">
+        <div >
+          <p>Dive</p>
+          <h3><%= @offer.dives %></h3>
+        </div>
+        <div class="divider"></div>
+        <%# <div></div> %>
+      </div>
+    </div>
+     <div class="quarter-info">
+      <div class="d-flex justify-content-around" style="width 100%">
+          <div >
+            <p>Category</p>
+            <h3><%= @offer.category %></h3>
+          </div>
+          <div class="divider"></div>
+          <%# <div></div> %>
+        </div>
+    </div>
+     <div class="quarter-info">
+      <div class="d-flex justify-content-around " style="width 100%">
+        <div >
+          <p>Duration</p>
+          <h3><%= @offer.duration %> <%= @offer.unit_duration %></h3>
+        </div>
+        <div class="divider"></div>
+        <%# <div></div> %>
+      </div>
+
+    </div>
+     <div class="quarter-info" style="width: fit-content;">
+      <div class="d-flex justify-content-between">
+        <div style="width 100%">
+          <p>Level</p>
+          <h3><%= @offer.level %></h3>
+        </div>
+      </div>
+
+    </div>
   </div>
   <h5>Briefing:</h5>
   <p><%= @offer.briefing %></p>
@@ -23,26 +61,30 @@
   <h5>Prerequisites:</h5>
   <p><%= @offer.prerequisites %></p>
 
-  <div class="mt-3">
-    <h3>Request the booking of this dive</h3>
-    <%= simple_form_for [@offer, @booking], data: { controller: 'flatpickr' } do |f| %>
-      <%= f.error_notification %>
-      <div class="d-flex align-items-center">
-        <div class="mb-3 me-3 string optional start_at">
-          <%= f.input :start_at,
-                      as: :string,
-                      input_html: {
-                        class: "start_at",
-                        data: {flatpickr_target: "dateInput"}
-                      }
-                      %>
+<div class="container mt-5">
+  <div class="d-flex justify-content-between">
+    <div class="mt-3">
+      <h3>Request the booking of this dive</h3>
+      <%= simple_form_for [@offer, @booking], data: { controller: 'flatpickr' } do |f| %>
+        <%= f.error_notification %>
+        <div class="d-flex align-items-center">
+          <div class="mb-3 me-3 string optional start_at">
+            <%= f.input :start_at,
+                        as: :string,
+                        input_html: {
+                          class: "start_at",
+                          data: {flatpickr_target: "dateInput"}
+                        }
+                        %>
+          </div>
+          <% if user_signed_in? %>
+            <%= f.submit 'Book dive', class: "btn btn-secondary" %>
+          <% else %>
+            <%= f.submit 'Book dive', class: "disabled btn" %>
+          <% end %>
         </div>
-        <% if user_signed_in? %>
-          <%= f.submit 'Book dive', class: "btn btn-secondary" %>
-        <% else %>
-          <%= f.submit 'Book dive', class: "disabled btn" %>
-        <% end %>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
+  </div>
   </div>
 </div>
