symbole localisation + show offer

--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -3,7 +3,7 @@
     <div>
       <h1><%= @offer.name %></h1>
       <h3>With: <%=@offer.user.first_name%> <%= @offer.user.last_name%></h3>
-      <h5><i class="fa-solid fa-location-pin"></i> <%= @offer.user.location%></h5>
+      <h5><i class="fa-solid fa-location-dot"></i> <%= @offer.user.location%></h5>
     </div>
     <div>
       <button class="btn btn-orange" type="button">Contact</button>
@@ -54,11 +54,11 @@
 
     </div>
   </div>
-  <h5>Briefing:</h5>
+  <h5><u>Briefing</u></h5>
   <p><%= @offer.briefing %></p>
-  <h5>Included:</h5>
+  <h5><u>Included</u></h5>
   <p><%= @offer.included %></p>
-  <h5>Prerequisites:</h5>
+  <h5><u>Prerequisites</u></h5>
   <p><%= @offer.prerequisites %></p>
 
 <div class="container mt-5">
@@ -67,10 +67,11 @@
       <h3>Request the booking of this dive</h3>
       <%= simple_form_for [@offer, @booking], data: { controller: 'flatpickr' } do |f| %>
         <%= f.error_notification %>
-        <div class="d-flex align-items-center">
+        <div class="align-items-center">
           <div class="mb-3 me-3 string optional start_at">
             <%= f.input :start_at,
                         as: :string,
+                        placeholder: "dd/mm/yyyy",
                         input_html: {
                           class: "start_at",
                           data: {flatpickr_target: "dateInput"}
