--- a/app/views/pros/index.html.erb
+++ b/app/views/pros/index.html.erb
@@ -37,7 +37,7 @@
                 <h2><%= p.first_name %> <%= p.last_name[0].capitalize%>.</h2>
                 <p><%= truncate p.bio, length: 100 %></p>
                 <span class="underline">Read more</span>
-                <p><i style="color:#477E9F d-flex" class="fa-solid fa-location-pin mx-1 "></i><%= p.location %></p>
+                <p><i style="color:#477E9F d-flex" class="fa-solid fa-location-dot"></i> <%= p.location %></p>
             </div>
           </div>
         </div>
