search everywhere center navbar

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container container-transparent-navbar">
-  <h1>OUAICH, ICI C'EST LA POSTE</h1>
+  <h1 style="text-align: center"><i class="fa-solid fa-paper-plane"></i> OUAICH, ICI C'EST LA POSTE</h1>
   <div class="messenger">
 
     <%@bookings_owner.each do |b| %>
@@ -27,7 +27,6 @@
     <% end %>
   </div>
 </div>
-
 
 
 
