--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
   <body>
     <%= render "shared/navbar" %>
     <%= render "shared/flashes" %>
-    <%= yield %>
+    <div class="min-h-90vh">
+      <%= yield %>
+    </div>
     <%= render "shared/footer" %>
   </body>
 </html>
