--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,9 +1,10 @@
 // Cards de l'index des pros
 .cards{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 15px;
+  padding :15px;
   flex-grow: 1;
-  grid-gap: 28px;
   a {
     text-decoration: none;
   }
@@ -12,7 +13,7 @@
 .card-pro {
   overflow: hidden;
   background: transparent;
-  // box-shadow: $box-shadow-cards;
+  // box-shadow: 0px 4px;
   margin-top: 10px;
   border-radius: 5px;
   // .image-pro {
