--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -4,7 +4,7 @@
 $red: #FD1015;
 $blue: #0D6EFD;
 $yellow: #FFC65A;
-$orange: #E67E22;
+$orange: #FFA711;
 $green: #1EDD88;
 $gray: #343a40;
 $light-gray: #F4F4F4;
