--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -5,17 +5,35 @@
       <h3>With: <%=@offer.user.first_name%> <%= @offer.user.last_name%></h3>
       <h5><i class="fa-solid fa-location-pin"></i> <%= @offer.user.location%></h5>
     </div>
-    <div>
-      <button class="btn btn-orange" type="button">Contact</button>
-    </div>
   </div>
 </div>
 
-<div class="container mt-5">
+<div class="container">
+  <div class="mt-3 d-flex justify-content-between">
+      <h3>Book a session:</h3>
+      <%= simple_form_for [@offer, @booking], data: { controller: 'flatpickr' } do |f| %>
+        <%= f.error_notification %>
+        <div class="d-flex align-items-center">
+          <div class="mb-3 me-3 string optional start_at">
+            <%= f.input :start_at,
+                        as: :string,
+                        input_html: {
+                          class: "start_at",
+                          data: {flatpickr_target: "dateInput"}
+                        }
+                        %>
+          </div>
+          <%= f.submit 'Book dive', class: "btn btn-primary" %>
+        </div>
+      <% end %>
+  </div>
+</div>
+
+<div class="container">
   <div class="d-flex justify-content-between infos-offer">
     <div class="quarter-info">
       <div class="d-flex justify-content-around" style="width 100%">
-        <div >
+        <div>
           <p>Dive</p>
           <h3><%= @offer.dives %></h3>
         </div>
@@ -60,31 +78,3 @@
   <p><%= @offer.included %></p>
   <h5>Prerequisites:</h5>
   <p><%= @offer.prerequisites %></p>
-
-<div class="container mt-5">
-  <div class="d-flex justify-content-between">
-    <div class="mt-3">
-      <h3>Request the booking of this dive</h3>
-      <%= simple_form_for [@offer, @booking], data: { controller: 'flatpickr' } do |f| %>
-        <%= f.error_notification %>
-        <div class="d-flex align-items-center">
-          <div class="mb-3 me-3 string optional start_at">
-            <%= f.input :start_at,
-                        as: :string,
-                        input_html: {
-                          class: "start_at",
-                          data: {flatpickr_target: "dateInput"}
-                        }
-                        %>
-          </div>
-          <% if user_signed_in? %>
-            <%= f.submit 'Book dive', class: "btn btn-secondary" %>
-          <% else %>
-            <%= f.submit 'Book dive', class: "disabled btn" %>
-          <% end %>
-        </div>
-      <% end %>
-    </div>
-  </div>
-  </div>
-</div>
