--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,7 +20,10 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <%= render "shared/searchbarlight" %>
+    <% unless ((controller_name == "pages" && action_name == "home") || (controller_name == "pros"))%>
+      <%= render "shared/searchbarlight" %>
+    <% end %>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
       <%# <%= link_to "Pro divers", pros_path, class:"nav-link" %> %>
