--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,7 +26,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
-      <%# <%= link_to "Pro divers", pros_path, class:"nav-link" %> %>
+      <%# <%= link_to "Pro divers", pros_path, class:"nav-link" %>
         <% if user_signed_in? %>
           <li class="nav-item active">
             <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
