--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,12 +18,10 @@
         </div>
       </div>
     </div>
-    <div class="encircle bounce animated">
-      <div class="arrow">
-      </div>
-    </div>
-  </div>
-<div class="dark fold">
+    <a class="encircle bounce animated" href="#scroll-position">
+      <div class="arrow"></div>
+    </a>
+<div class="dark fold" id="scroll-position">
   <div class="container d-flex">
     <div class="w-50 px-5 border-end">
       <h2 class="font-size-28 pb-5 text-center">About us</h2>
@@ -37,44 +35,48 @@
     </div>
   </div>
 </div>
-  <div class="fold container pb-1">
-  <div class="font-size-28 text-center" >
+
+
+  <div class="fold container pb-1 position-relative">
+  <div class="font-size-28 text-center">
+
     <h2> Feeling uninspired ? Here are some recommendations for you </h2>
   </div>
 
   <div class="cards d-flex px-5 py-3 fold">
-    <div class="card-trip w-25 rounded">
+    <%= link_to pros_path(query: 'bali'), class: "card-trip w-25 rounded" do %>
       <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654246358/sonaal-bangera-RVuj71bsU4Y-unsplash_ihtj9y.jpg" />
-        <div class="card-trip-infos">
-          <div>
-            <h2>Bali</h2>
-            <p>Dive with manta rays</p>
+      <div class="card-trip-infos">
+        <div>
+          <h2>Bali</h2>
+          <p>Dive with manta rays</p>
         </div>
       </div>
-    </div>
+    <% end %>
 
-
-    <div class="card-trip w-25 rounded">
+    <%= link_to pros_path(query: 'belize'), class: "card-trip w-25 rounded" do %>
       <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654246658/david-reynolds--eMN9QKB5bE-unsplash_glwpns.jpg" />
-        <div class="card-trip-infos">
-          <div>
-            <h2>Belize</h2>
-            <p>Explore the barrier reef</p>
+      <div class="card-trip-infos">
+        <div>
+          <h2>Belize</h2>
+          <p>Explore the barrier reef</p>
         </div>
       </div>
-    </div>
+    <% end %>
 
-    <div class="card-trip w-25 rounded">
+    <%= link_to pros_path(query: 'cozumel'), class: "card-trip w-25 rounded" do %>
       <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654246509/malek-bee-Zw_eV19BC58-unsplash_wsile0.jpg" />
         <div class="card-trip-infos">
           <div>
             <h2>Cozumel</h2>
             <p>Discover the wrecks of Mexico</p>
-        </div>
+          </div>
       </div>
-    </div>
+    <% end %>
 
-    <div class="card-trip w-25 rounded">
+
+
+    <%= link_to pros_path(query: 'cancun'), class: "card-trip w-25 rounded" do %>
       <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654174745/cenote_nma8pr.jpg" />
       <div class="card-trip-infos">
         <div>
@@ -83,22 +85,21 @@
         </div>
       </div>
     </div>
-  </div>
+  <% end %>
+
 
   <div class="cards d-flex px-5  py-3 fold">
-    <div class="card-trip w-25 rounded">
+    <%= link_to pros_path(query: 'baja california'), class: "card-trip w-25 rounded" do %>
         <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654245062/photodiver_gnf3nr.jpg" />
         <div class="card-trip-infos">
           <div>
             <h2>Baja California</h2>
             <p>Learn underwater photography</p>
-          </div>
         </div>
-    </div>
+      </div>
+  <% end %>
 
-
-
-    <div class="card-trip w-25 rounded">
+    <%= link_to pros_path(query: 'malta'), class: "card-trip w-25 rounded" do %>
         <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654200702/shifaaz-shamoon-t4a2jEhg1n8-unsplash_tvczol.jpg" />
         <div class="card-trip-infos">
           <div>
@@ -106,9 +107,9 @@
             <p>Free dive in the best reefs</p>
           </div>
         </div>
-    </div>
+    <% end %>
 
-    <div class="card-trip w-25 rounded">
+    <%= link_to pros_path(query: 'norway'), class: "card-trip w-25 rounded" do %>
         <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654238708/tech_diving_mgbnnc.jpg" />
         <div class="card-trip-infos">
           <div>
@@ -116,9 +117,9 @@
             <p>Get into Tech Diving</p>
           </div>
         </div>
-    </div>
+    <% end %>
 
-    <div class="card-trip w-25 rounded">
+    <%= link_to pros_path(query: 'honduras'), class: "card-trip w-25 rounded" do %>
         <img src="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654238858/beach_dive_dc7juf.jpg" />
         <div class="card-trip-infos">
           <div>
@@ -127,7 +128,7 @@
           </div>
         </div>
     </div>
-</div>
+<% end %>
 </div>
 
 <div class="vague">
