--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -21,10 +21,25 @@
   </div>
 <div class="container d-flex">
   <div class="filters">
-    <strong><p>Category</p>
+    <strong>
+    <p>Category</p>
+    <div class="d-flex">
+    <%= link_to "Course", pro_path(@pro, category:"Course"), class: "btn btn-secondary" %>
+    <%= link_to "Fun dive", pro_path(@pro, category:"Fun dive"), class: "btn btn-secondary" %>
+    </div>
     <p>Level</p>
+    <div class="d-flex">
+    <%= link_to "Beginner", pro_path(@pro, level:"Beginner"), class: "btn btn-secondary" %>
+    <%= link_to "Advanced", pro_path(@pro, level:"Advanced"), class: "btn btn-secondary" %>
+    </div>
     <p>Price</p>
-    <p>Certification</p></strong>
+    <p>Certification</p>
+    <div class="d-flex">
+    <%= link_to "PADI", pro_path(@pro, category:"PADI"), class: "btn btn-secondary" %>
+    <%= link_to "SSI", pro_path(@pro, category:"SSI"), class: "btn btn-secondary" %>
+    <%= link_to "TDI", pro_path(@pro, category:"TDI"), class: "btn btn-secondary" %>
+    </div>
+    </strong>
   </div>
   <div class="offers">
       <h2 class="mx-4">Experiences</h2>
