--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -1,80 +1,74 @@
-<div class="banner-show-booking">
-  <div class="banner-booking-info d-flex align-items-center" style="justify-content: space-between">
-    <div>
+<div class="banner-show-booking position-relative">
+  <div class="row align-items-center justify-content-between">
+    <div class="col-6 banner-booking-info">
       <h1><%= @offer.name %></h1>
       <h3>With: <%=@offer.user.first_name%> <%= @offer.user.last_name%></h3>
       <h5><i class="fa-solid fa-location-dot"></i> <%= @offer.user.location%></h5>
     </div>
-  </div>
-</div>
-
-<div class="container">
-  <div class="mt-3 d-flex justify-content-between">
-      <h3>Book a session:</h3>
-      <%= simple_form_for [@offer, @booking], data: { controller: 'flatpickr' } do |f| %>
-        <%= f.error_notification %>
-        <div class="d-flex align-items-center">
-          <div class="mb-3 me-3 string optional start_at">
-            <%= f.input :start_at,
-                        as: :string,
-                        input_html: {
-                          class: "start_at",
-                          data: {flatpickr_target: "dateInput"}
-                        }
-                        %>
-          </div>
-          <%= f.submit 'Book dive', class: "btn btn-primary" %>
-        </div>
-      <% end %>
-  </div>
-</div>
-
-<div class="container">
-  <div class="d-flex justify-content-between infos-offer">
-    <div class="quarter-info">
-      <div class="d-flex justify-content-around" style="width 100%">
-        <div>
-          <p>Dive</p>
-          <h3><%= @offer.dives %></h3>
-        </div>
-        <div class="divider"></div>
-        <%# <div></div> %>
-      </div>
+    <div class="col-6 wave">
+      <%= image_tag 'wave-01.png', class: 'position-absolute bottom-0 end-0 w-50' %>
     </div>
-     <div class="quarter-info">
-      <div class="d-flex justify-content-around" style="width 100%">
+  </div>
+</div>
+
+<div class="d-flex w-100 align-items-start">
+  <div class="w-75 p-5">
+    <div class="d-flex justify-content-between infos-offer">
+      <div class="quarter-info">
+        <div class="d-flex justify-content-around" style="width 100%">
+          <div>
+            <p>Dive</p>
+            <h3><%= @offer.dives %></h3>
+          </div>
+          <div class="divider"></div>
+        </div>
+      </div>
+      <div class="quarter-info">
+        <div class="d-flex justify-content-around" style="width 100%">
           <div >
             <p>Category</p>
             <h3><%= @offer.category %></h3>
           </div>
           <div class="divider"></div>
-          <%# <div></div> %>
-        </div>
-    </div>
-     <div class="quarter-info">
-      <div class="d-flex justify-content-around " style="width 100%">
-        <div >
-          <p>Duration</p>
-          <h3><%= @offer.duration %> <%= @offer.unit_duration %></h3>
-        </div>
-        <div class="divider"></div>
-        <%# <div></div> %>
-      </div>
-
-    </div>
-     <div class="quarter-info" style="width: fit-content;">
-      <div class="d-flex justify-content-between">
-        <div style="width 100%">
-          <p>Level</p>
-          <h3><%= @offer.level %></h3>
         </div>
       </div>
-
+      <div class="quarter-info">
+        <div class="d-flex justify-content-around " style="width 100%">
+          <div >
+            <p>Duration</p>
+            <h3><%= @offer.duration %> <%= @offer.unit_duration %></h3>
+          </div>
+          <div class="divider"></div>
+        </div>
+      </div>
+      <div class="quarter-info" style="width: fit-content;">
+        <div class="d-flex justify-content-between">
+          <div style="width 100%">
+            <p>Level</p>
+            <h3><%= @offer.level %></h3>
+          </div>
+        </div>
+      </div>
+    </div>
+    <h5><u>Briefing</u></h5>
+    <p><%= @offer.briefing %></p>
+    <h5><u>Included</u></h5>
+    <p><%= @offer.included %></p>
+    <h5><u>Prerequisites</u></h5>
+    <p><%= @offer.prerequisites %></p>
+  </div>
+  <div class="validate-banner w-25 p-5 white shadow p-3 mx-5 bg-white rounded" style="margin-top: -70px; position: sticky; top: 100px;">
+    <div class="mt-3 justify-content-between">
+      <h4>Book a session:</h4>
+      <%= simple_form_for [@offer, @booking], data: { controller: 'flatpickr' } do |f| %>
+        <%= f.error_notification %>
+        <div class=" align-items-center">
+          <div class="mb-3 me-3 string optional start_at">
+            <%= f.input :start_at, as: :string, input_html: { class: "start_at", data: {flatpickr_target: "dateInput"} } %>
+          </div>
+          <%= f.submit 'Book dive', class: "btn btn-primary" %>
+        </div>
+      <% end %>
     </div>
   </div>
-  <h5><u>Briefing</u></h5>
-  <p><%= @offer.briefing %></p>
-  <h5><u>Included</u></h5>
-  <p><%= @offer.included %></p>
-  <h5><u>Prerequisites</u></h5>
-  <p><%= @offer.prerequisites %></p>
+</div>
