--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -26,3 +26,10 @@
   background-color: $orange;
   font-family: $body-font
 }
+
+.btn-success {
+  border-radius: 100px;
+  height: 40px;
+  color:green;
+  background-color: white;
+}
