--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -23,13 +23,14 @@
     <strong>
     <p>Category</p>
     <div class="d-flex">
-    <%= link_to "Course", pro_path(@pro, category:"Course"), class: "btn btn-success" %>
-    <%= link_to "Fun dive", pro_path(@pro, category:"Fun dive"), class: "btn btn-success" %>
+    <%= link_to "Course", pro_path(@pro, category:"Course", level: params[:level]), class: "btn btn-success #{"active" if params[:category] == "Course"} "%>
+    <%= link_to "Fun Dive", pro_path(@pro, category:"Fun Dive", level: params[:level]), class: "btn btn-success #{"active" if params[:category] == "Fun Dive"}" %>
+    <%= link_to "Specialty Training", pro_path(@pro, category:"Specialty Training", level: params[:level]), class: "btn btn-success #{"active" if params[:category] == "Specialty Training"}" %>
     </div>
     <p>Level</p>
     <div class="d-flex">
-    <%= link_to "Beginner", pro_path(@pro, level:"Beginner"), class: "btn btn-success" %>
-    <%= link_to "Advanced", pro_path(@pro, level:"Advanced"), class: "btn btn-success" %>
+    <%= link_to "Beginner", pro_path(@pro, level:"Beginner", category: params[:category]), class: "btn btn-success #{"active" if params[:level] == "Beginner"}" %>
+    <%= link_to "Advanced", pro_path(@pro, level:"Advanced", category: params[:category]), class: "btn btn-success #{"active" if params[:level] == "Advanced"}" %>
     </div>
     <p>Price</p>
     </strong>
