--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container opacity mt-2" style="width: 600px">
 <div class="card border-white p-5">
   <div class="text-center">
-    <h2 class="py-2">🤿 Add a new offer</h2>
+    <h2 class="py-2 mt-5">🤿 Add a new offer</h2>
   </div>
 <%= simple_form_for (@offer) do |f| %>
   <%= f.error_notification %>
