--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,6 +31,12 @@
           <li class="nav-item active">
             <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
           </li>
+          <% if current_user.gotmail? %>
+            <li class="nav-item active">
+              <%= link_to "GOT MAIL", messages_path, class: "nav-link btn btn-danger" %>
+            </li>
+          <% end %>
+
           <li class="nav-item dropdown">
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/WilliamPeirs", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <% if current_user.pro?  %>
